--- a/react-player/package.json
+++ b/react-player/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gustafgronlund.github.io/Music_Player",
+  "homepage": "https://thedaysbefore.github.io",
   "name": "react-player",
   "version": "0.1.0",
   "private": true,
